--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,13 @@
-name: Generate Snake
+name: Generate Datas
 
 on:
-  schedule: # execute every 12 hours
-    - cron: "* */12 * * *"
+  schedule: # execute every 6 hours
+    - cron: "* */6 * * *"
   workflow_dispatch:
 
 jobs:
   build:
-    name: Update Data
+    name: Jobs to update datas
     runs-on: ubuntu-latest
     steps:
       # Snake Animation
@@ -17,9 +17,10 @@ jobs:
           github_user_name: wessan001
           svg_out_path: dist/github-contribution-grid-snake.svg
 
-  - uses: crazy-max/ghaction-github-pages@v2.1.3
-    with:
-      target_branch: output
-      build_dir: dist
-    env:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: crazy-max/ghaction-github-pages@v2.1.3
+        with:
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  
